# promptspec

./: .gitignore  CLAUDE.md  README.md  benchmark-results.json  demo-benchmark.sh  demo-collaborative-tui.sh  demo-collaborative.sh  demo-crisis-strategy.sh  demo-discover.sh  demo-engines.sh  demo-tui.sh  demo.sh  pyproject.toml
.github/: copilot-instructions.md
scripts/: benchmark_strategies.py  demo_collaborative.py
specs/: adaptive-interview.promptspec.md  ai-kanban-board.promptspec.md  api-docs-generator.promptspec.md  base-analyst.promptspec.md  chain-of-thought.promptspec.md  code-review-checklist.promptspec.md  collaborative-investment-strategy.promptspec.md  collaborative-investment-strategy.promptspec.yaml  collaborative-writer.promptspec.md  compoundvision-investment-simulator.promptspec.md  consulting-proposal.promptspec.md  contrastive-mining.promptspec.md  contrastive-mining.promptspec.yaml  cot-baseline.promptspec.md  crisis-strategy-analyzer.promptspec.md  fieldpulse-iot-agriculture.promptspec.md  knowledge-base-article.promptspec.md  liddell-hart-strategy.promptspec.md  market-research-brief.promptspec.md  mintlite-finance-app.promptspec.md  multi-persona-debate.promptspec.md  prompt-refactoring-pipeline.promptspec.md  react-agent.promptspec.md  reflection-solver.promptspec.md  reflection-writer.promptspec.md  reflection-writer.promptspec.yaml  self-consistency-solver.promptspec.md  self-consistency-solver.promptspec.yaml  simplified-tree-of-thought-solver.promptspec.md  spec-discovery.promptspec.md  tree-of-thought-solver.promptspec.md  tree-of-thought-solver.promptspec.yaml  tutorial-generator.promptspec.md  voidborne-roguelike.promptspec.md
tests/: test_async_cleanup.py  test_discovery_catalog.py  test_discovery_config.py  test_discovery_metadata.py  test_engines.py  test_promptspec.py  test_promptspec_directives.py  test_promptspec_tools.py  test_root_cascading.py  test_tui_edit.py  test_tui_pilot.py  test_tui_scanner.py
vscode-extension/: README.md  language-configuration.json  package.json  promptspec-0.1.0.vsix  promptspec-0.2.0.vsix  promptspec-0.3.0.vsix  promptspec-0.4.0.vsix  (+2 more)
(+57 files in other folders)
