[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptspec"
version = "0.1.0"
description = "An LLM-powered prompt composition system with directives and variables"
authors = [{name = "Paulo Salem", email = "paulosalem@paulosalem.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "llm",
    "ai",
    "prompting",
    "prompt-engineering",
    "prompt-composition",
    "directives",
    "templates",
]

dependencies = [
    "ellements>=0.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/paulosalem/promptspec"
Repository = "https://github.com/paulosalem/promptspec"
"Bug Tracker" = "https://github.com/paulosalem/promptspec/issues"

[project.scripts]
promptspec = "promptspec.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promptspec"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/specs",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
target-version = ['py311']
line-length = 88
